Fix an alignment issue in the tar/deb links

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ table {
   collapse-border: collapse;
 }
 th {
+  width: 100%;
   font-weight: bolder;
 }
 td,th {
